LIST OF CHANGES

release 50.15
  - RefMaker not to build smalt index

release 50.14
  - seqchksum_merge.pl:
      fix bug when handling different format files and added a test
      dropped -n option
      added a check for non-unique partitions in each input file

release 50.13
  - add "-F 0x 200" flag to fastq_summ command to filter qc fails from 10k read fastq subsets used for (some) QC checks

release 50.12
  - seqchksum_merge.pl
      updated to generate chksums on the fly if given a bam file
      added new column class (partition) to partition data when merging.
      modified and extended tests. N.B. running the script on multiple bam files 
      should generate the same values as bamcat + bamseqchksum but the
      order is no longer guaranteed to be the same
  - RefMaker: added extra dict symlink for RNA SeQc
  - code changes to reduce number of warnings under Perl 5.22.2
  
release 50.11
  - RefMaker: added function for longranger mkref and extended test

release 50.10
  - RefMaker: generate blat 2bit genome references
  - bam_alignment.pl: enforce to have id_run and position defined. It's
    needed to create an old-style bamflagstats autoqc result object, see
    https://github.com/wtsi-npg/npg_qc/pull/342.

release 50.9
  - fix bug that causes the symlink of the .fa file in the bowtie2
    directory to point to the wrong location

release 50.8
  - replace bamcheck file by 2x filtered samtools stats files

release 50.7
  - bam alignment:
      remove redundant not_strip_bam_tag flag
      remove do_markduplicates flag and always call mark duplicates
  - bam mark duplicates:
      drop replace_file flag, always run file moves
      derive metrics_file attribute from teh output file name and then rename the file
      to be forward compatible with pending changes in bam_flagstats, call bam_flagstats
        parser via top-level execute() method ot be forward compatible
      bam_flagstats check is serialized in the same way as it is done in post-p4 flow