@@ -1,5 +1,7 @@
 LIST OF CHANGES
 
+  - RefMaker: updated to generate STAR aligner reference genome indexes
+
 release 50.15
   - RefMaker not to build smalt index
 
